[package]
name = "test_orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
serde_json = "1"
config = "0.13"
tokio = "1.23"
